k8s/talos/apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nordbye-service
  namespace: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
